; ModuleID = '/home/carl/AnghaBench/git/compat/extr_mingw.c_wcstoutfdup_startup.c'
source_filename = "/home/carl/AnghaBench/git/compat/extr_mingw.c_wcstoutfdup_startup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32*, i64)* @wcstoutfdup_startup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @wcstoutfdup_startup(i8* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i64, i64* %6, align 8
  %10 = call i32 @xwcstoutf(i8* %7, i32* %8, i64 %9)
  %11 = add nsw i32 %10, 1
  %12 = sext i32 %11 to i64
  store i64 %12, i64* %6, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @malloc_startup(i64 %13)
  %15 = load i8*, i8** %4, align 8
  %16 = load i64, i64* %6, align 8
  %17 = call i8* @memcpy(i32 %14, i8* %15, i64 %16)
  ret i8* %17
}

declare dso_local i32 @xwcstoutf(i8*, i32*, i64) #1

declare dso_local i8* @memcpy(i32, i8*, i64) #1

declare dso_local i32 @malloc_startup(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
